Fix scrollbar on macOS

--- a/styles/commit-preview-view.less
+++ b/styles/commit-preview-view.less
@@ -2,6 +2,7 @@
 
 .github-CommitPreview-root {
   overflow: auto;
+  z-index: 1; // Fixes scrollbar on macOS
 
   .github-FilePatchView {
     height: auto;
